--- a/projects/boot_loader/Makefile
+++ b/projects/boot_loader/Makefile
@@ -7,7 +7,8 @@
 #
 # Defines the part type that this project uses.
 #
-PART=TM4C1290NCPDT
+PART?=TM4C1290NCPDT
+$(info compiling bootloader for PART = $(PART))
 
 # # The base directory for TivaWare.
 #
