move pinout definitions to other files for MPI version, remove/comment some commands

--- a/projects/mpi_mcu/Makefile
+++ b/projects/mpi_mcu/Makefile
@@ -111,7 +111,7 @@ ifdef REV2
 ${COMPILER}/mpi_mcu.axf: ${COMPILER}/pinout_rev2.o
 endif 
 endif
-${COMPILER}/mpi_mcu.axf: ${COMPILER}/pinsel.o
+${COMPILER}/mpi_mcu.axf: ${COMPILER}/pinsel_MPI.o
 ${COMPILER}/mpi_mcu.axf: ${COMPILER}/i2c_reg.o
 ${COMPILER}/mpi_mcu.axf: ${COMPILER}/LocalUart.o
 ${COMPILER}/mpi_mcu.axf: ${COMPILER}/utils.o
