make the I2C configurable by xmacro, I2C slave is up and running, but not yet tested

--- a/projects/mpi_mcu/Makefile
+++ b/projects/mpi_mcu/Makefile
@@ -181,3 +181,6 @@ ifneq (${MAKECMDGOALS},clean)
 endif
 
 .PHONY: ${COMPILER}
+
+openocd_flash: ${COMPILER}/mpi_mcu.axf
+	openocd -f /usr/local/share/openocd/scripts/board/ti_ek-tm4c1294xl.cfg -c "program ${COMPILER}/mpi_mcu.axf verify reset exit"
